# disarm

./: .clang-format  .gitignore  CMakeLists.txt  decode.c  desc.txt  disarm64.h  format.c  meson.build  meson_options.txt  parse.py
.github/workflows/: ci.yml
test/: decode-test-branchreg.inc  decode-test-fmovimm.inc  decode-test-immlogical.inc  decode-test-immsimd.inc  decode-test-pauth.inc  decode-test.c  encode-test-adcsbc.inc  encode-test-addsub-imm.inc  encode-test-addsub-shift.inc  encode-test-adr.inc  encode-test-bfm-extr.inc  encode-test-branchreg.inc  encode-test-fcma.inc  encode-test-hint.inc  encode-test-immfmov.inc  encode-test-immlogical.inc  encode-test-immsimd.inc  encode-test-mem.inc  encode-test-memfp.inc  encode-test-memsimd.inc  encode-test-pauth.inc  encode-test-simd-shr-vec-imm.inc  encode-test-simdcopy.inc  encode-test-simdxelem.inc  encode-test-sys.inc  encode-test.c  meson.build
